tests/snapshots/e2e__trace_push@docker-action.snap
---
source: tests/e2e.rs
expression: out
---
trace push  2 entry workflows

╭─ push   (filters=none)
├─→ .github/workflows/ci.yml  [wf]
│   ├─→ actions/checkout  [ext-ac]  @v4
│   ├─→ .  [ac]
│   ╰─→ .github/actions/inner  [ac]
│
╰─→ .github/workflows/release.yml  [wf]
    ├─→ actions/checkout  [ext-ac]  @v4
    ╰─→ .  [ac]
