tests/snapshots/e2e__trace_push@dynamic-matrix-from-json.snap
---
source: tests/e2e.rs
expression: out
---
trace push  1 entry workflow

╭─ push   (filters=none)
╰─→ .github/workflows/test.yml  [wf]
    ├─→ actions/checkout  [ext-ac]  @v4
    ╰─→ actions/checkout  [ext-ac]  @v4
