tests/snapshots/e2e__trace_push@environment-deployment.snap
---
source: tests/e2e.rs
expression: out
---
trace push  1 entry workflow

╭─ push   (filters=none)
╰─→ .github/workflows/publish.yml  [wf]
    ╰─→ actions/checkout  [ext-ac]  @v4
